# crm_fastapi_react

back/: .env.dev  .gitignore  alembic.ini  config.py  docker-compose.dev.yml  docker-compose.yml  main.py  pyproject.toml
back/migrations/: env.py
back/migrations/versions/: b861840188a2_initial.py
back/src/apps/: apps_routers.py
back/src/apps/auth/: models.py  permissions.py  repositories.py  schemas.py  utils.py
back/src/apps/auth/routers/: auth.py  users.py
back/src/apps/crm/: depends.py  models.py  repositories.py  schemas.py
back/src/apps/crm/routers/: departments.py  employees.py  photos.py  projects.py  tasks.py
back/src/apps/sqladmin/: admin_auth.py  admin_views.py  routers.py
back/src/base_utils/: base_depends.py  base_errors.py  base_repository.py  base_validators.py
back/src/db/: base_db.py  db.py
back/src/utils/: repository.py  validators.py
back/tests/: conftest.py  test_auth.py  test_db_models.py  test_department.py  test_departments.py  test_employees.py  test_photos.py  test_projects.py  test_tasks.py  test_users.py
front/public/: index.html
front/src/: App.js
front/src/components/: Header.jsx  TaskCard.jsx  TopMenuBar.jsx
front/src/components/UI/: Header.jsx  TaskCard.jsx
front/src/components/UI/buttons/: Button.jsx  DropdownButton.jsx  ExitButton.jsx
front/src/components/UI/inputs/: DefaultInput.jsx  DefaultSelect.jsx  DefaultTextArea.jsx  InputWithHelptext.jsx  SelectWithHelptext.jsx
front/src/forms/: CreateTaskForm.jsx
front/src/js/: BaseAPI.js
